--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,16 +15,6 @@ html
 			console.log(rust_crate);
 		script(src="bin/main.js")
 	body
-		#header
-			span#name
-			//- button#allowTrust.normButton Allow Trusting
-			form#groupForm(action="")
-				input#groupInput(type="text" autocomplete="off" value="Default")
-				button.normButton go
-		ul#messages
-		form#msgForm(action="")
-			label.switch(for="isEncrypting")
-				input#isEncrypting(type="checkbox") 
-				span.slider.round
-			input#msgInput(type="text" autocomplete="off")
-			button.normButton send
+		hl Yaking Yak
+		hr
+		p Its pretty cool. You should launch the client using the "cargo run" command
